fix: add extra spacing between Related Apps

--- a/src/views/all-apps/SpecView.css
+++ b/src/views/all-apps/SpecView.css
@@ -18,3 +18,8 @@ Button.btn-warning {
     margin-left: 20px;
     margin-right: 20px;
 }
+
+Button.btn-warning.related-apps {
+    margin-left: 40px;
+    margin-right: 40px;
+}
